--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header a:hover {
 .hero-container img {
   width: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 /* --- About Me Section --- */
@@ -390,7 +390,7 @@ footer a:hover {
 .container img {
   margin-bottom: 15px;
 }
-.container input[type="text"],
+.container input[type=text],
 .container select,
 .container textarea {
   width: 100%;
@@ -402,7 +402,7 @@ footer a:hover {
   margin-bottom: 16px;
   resize: vertical; /* Allow the user to vertically resize the textarea */
 }
-.container input[type="submit"] {
+.container input[type=submit] {
   display: block;
   margin: 20px auto 0;
   background-color: #2563eb;
@@ -412,7 +412,7 @@ footer a:hover {
   border-radius: 4px;
   cursor: pointer;
 }
-.container input[type="submit"]:hover {
+.container input[type=submit]:hover {
   background-color: #dbe9ee;
   color: #ffffff;
 }
@@ -459,7 +459,7 @@ footer a:hover {
     height: 100%;
     max-height: 800px;
     -o-object-fit: cover;
-    object-fit: cover;
+       object-fit: cover;
   }
   /* --- About Me Section --- */
   .about-container {
@@ -537,8 +537,8 @@ footer a:hover {
     margin-bottom: 15px;
     max-width: 800px;
     -o-object-fit: cover;
-    object-fit: cover;
+       object-fit: cover;
     -o-object-position: left;
-    object-position: left;
+       object-position: left;
   }
-}
+}/*# sourceMappingURL=style.css.map */
