--- a/newstyle.css
+++ b/newstyle.css
@@ -196,18 +196,18 @@ header a:hover {
 /* --- Learning More Section --- */
 .learning {
   padding: 50px 40px 50px 40px;
-  background-color: #e5e7eb;
+  background-color: #2563eb;
   text-align: center;
 }
 .learning h1 {
-  color: #1f2933;
+  color: #e5e7eb;
   font-size: 28px;
   margin: 0px;
 }
 .learning a {
   font-size: 18px;
   margin: 0 0px 40px;
-  color: #2563eb;
+  color: #1f2933;
 }
 .learning i {
   margin: 0 15px;
@@ -220,7 +220,9 @@ header a:hover {
 /* Certification Slider container */
 .certifications {
   text-align: center;
-  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #e5e7eb;
 }
 .certifications h2 {
   color: #1f2933;
@@ -716,11 +718,21 @@ button {
   .learning a {
     font-size: 26px;
   }
+  .certifications {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 80px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    gap: 100px;
+  }
   .certifications h2 {
     font-size: 28px;
   }
   .certifications h4 {
     font-size: 36px;
+    max-width: 450px;
   }
   .certifications .slider {
     max-width: 600px;
