--- a/code/RegularPages/style.scss
+++ b/code/RegularPages/style.scss
@@ -115,6 +115,7 @@ header {
 
     h2 {
       color: $primary-text;
+      font-weight: 300;
       margin-bottom: 20px;
       margin: 0;
     }
@@ -138,6 +139,7 @@ header {
   h4 {
     color: $primary-text;
     font-size: 36px;
+    font-weight: 300;
     margin: 0;
   }
 
@@ -169,6 +171,7 @@ header {
   h1 {
     color: $secondary-text;
     font-size: 24px;
+    font-weight: 300;
     margin-top: 0;
     margin-bottom: 10px;
   }
@@ -186,6 +189,7 @@ header {
 
   h2 {
     font-size: 26px;
+    font-weight: 100;
     color: $primary-text;
     margin: 0px;
   }
@@ -226,6 +230,7 @@ header {
   h1 {
     color: $secondary-color;
     font-size: 28px;
+    font-weight: 100;
     margin: 0px;
   }
 
@@ -260,6 +265,7 @@ header {
   h4 {
     color: $secondary-text;
     font-size: 20px;
+    font-weight: 100;
   }
 
   .slider-container {
@@ -324,12 +330,14 @@ header {
   h2 {
     color: $primary-text;
     font-size: 18px;
+    font-weight: 100;
     margin: 0px;
   }
 
   h4 {
     color: $secondary-text;
     font-size: 20px;
+    font-weight: 100;
     margin: 0px 0 20px 0;
   }
 
@@ -680,6 +688,7 @@ button {
   header {
     .hamburger {
       display: none;
+      position: sticky;
     }
 
     .nav-container {
@@ -709,6 +718,10 @@ button {
 
     li {
       margin-left: 20px;
+    }
+
+    a {
+      font-size: 15px;
     }
   }
 
