--- a/code/AdvancedPage/_components.scss
+++ b/code/AdvancedPage/_components.scss
@@ -106,15 +106,8 @@
 }
 
 .list {
-  list-style: none;
-  margin: 20px 0px 0px 0px;
-  padding-top: 40px;
-  border-top: solid 1px $secondary-color;
-
   display: flex;
-  flex-wrap: wrap;
-
-  &_item {
-    flex: 0 0 50%;
-  }
+  gap: 200px;
+  padding-top: 20px;
+  border-top: solid 1px $secondary-color;
 }
