--- a/code/RegularPages/AdvancedPage/_base.scss
+++ b/code/RegularPages/AdvancedPage/_base.scss
@@ -16,10 +16,9 @@ body {
   color: $primary-text;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
-main {
-  flex: 1;
-  background-color: $background-color;
-}
+// main {
+//   flex: 1;
+//   background-color: $background-color;
+// }
